Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10814

Hit DCHECK in DecimalUtil::DecodeFromFixedLenByteArray for core-s3 build

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 4.1.0
    • Impala 4.1.0
    • Backend
    • ghx-label-5

    Description

      Saw this build failure in asf-master-core-s3 build: 

      https://master-03.jenkins.cloudera.com/job/impala-asf-master-core-s3/61/

       

      Error Message

      DCHECK found in log file: /data/jenkins/workspace/impala-asf-master-core-s3/repos/Impala/logs/ee_tests/impalad.FATAL

      Standard Error

      Log file created at: 2021/07/19 18:41:06 Running on machine:

      impala-ec2-centos74-m5-4xlarge-ondemand-072f.vpc.cloudera.com

      Log line format: [IWEF]mmdd hh:mm:ss.uuuuuu threadid file:line] msg

      F0719 18:41:06.730994 4601 decimal-util.h:129] fb4b98709a88f345:b51bf00b00000002] Check failed: fixed_len_size > 0 (-15 vs. 0)

      F0719 18:41:08.161149 4711 decimal-util.h:129] e5432b6d3730539d:cf6c2d3100000002] Check failed: fixed_len_size > 0 (-15 vs. 0)

       

      From timestamp, the issue seems happened in test: query_test/test_scanners_fuzz.py::TestScannersFuzzing::test_fuzz_uncompressed_parquet_orc

      Attachments

        Activity

          People

            boroknagyz Zoltán Borók-Nagy
            wzhou Wenzhe Zhou
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: