IMPALA-10814: Fix crash on illegal Parquet file

In IMPALA-7087/IMPALA-8131  we allowed reading decimals with
different precision/scale than table metadata. To allow this
we relaxed some checks against the Parquet file schema.

However we should still add some sanity checks, e.g. ignoring
negative values, require that scale is not greater than precision.
This patch adds these sanity checks. Without these checks we might
hit DCHECKS in Parquet fuzz testing.

Change-Id: Ic6b06ac00e2af8f405f7b2b3c2eb952683821431
Reviewed-on: http://gerrit.cloudera.org:8080/17714
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>